css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  /* color: #f2f3f7; */
  /* color: #2c2b2b; */
}

body {
}

/* animation for spin */
@keyframes rotate {
  50% {
    transform: rotate(360deg);
  }
}

/* animation for hero image*/
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0.2;
  }
  /*  
  40% {
    opacity: 0.4;
  }
  /* 60% {
    opacity: 0.2;
  } */
  80% {
    opacity: 0.9;
  }
  /*   
  99% {
    opacity: 0.9;
  } */

  /* 100% {
    opacity: 1;
  } */
}

@font-face {
  font-family: "dream";
  src: url(Dreamingland.ttf);
}

@font-face {
  font-family: "sregs";
  src: url(SregsSerifDisplay-ExtLtIta.otf);
}

@font-face {
  font-family: "greatvibes";
  src: url(GreatVibes-Regular.ttf);
}
@font-face {
  font-family: "publicity";
  src: url("Publicity\ Brush.otf");
}

html {
}
/* main container */
.container {
  display: flex;
  flex-direction: column;
}

/* navigation bar */

#nav-bar {
  position: relative;
  width: 100%;
  height: 16vh;
  background-color: #f2f3f7;
  background-color: #fcfbfa;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-right: 5rem;
  padding-left: 5rem;
}

/* :hover #nav-bar{
  background-color: #2c2b2b;
} */

#logo {
  width: 8rem;
}

#nav-bar .grp2 ul {
  display: flex;
  list-style: none;
  gap: 5rem;
}

#nav-bar .grp2-member {
  font-size: 1.25rem;
  text-decoration: none;
  text-transform: capitalize;
  color: #2c2b2b;
  transition: 0.5s ease;
}

#nav-bar .grp2-member:hover {
  /* font-size: 1.4rem; */
  color: #d4af37;
}

#nav-bar .grp2 ul li {
  display: flex;
  flex-direction: row;
  justify-content: center;
  /* gap: rem; */
  /* align-content: center; */
}
/* drop down button */
.down:hover {
  animation: rotate 1s ease-in-out;
}

/* the drop panel itself */
#firstDownShow {
  height: 40vh;
  width: 100%;
  box-shadow: 0 2px 0.25rem #2e2e2e21;
  border-bottom: 2px solid #2c2b2b23;
  backdrop-filter: blur(10px);
  position: absolute;
  z-index: 4;
  left: 0;
  top: 100%;
  font-size: 6rem;
  text-transform: uppercase;
  padding-top: 4rem;
}

#firstDownShow h1 {
  color: #302f2fe8;
  text-shadow: 1px 1px 0.1rem #cfcfcf;
  text-align: center;
}

/* when the downarrow is hovered */
.down:hover + #firstDownShow {
  display: flex;
  text-align: center;
  justify-content: center;
  color: #16101069;
}

/* button that shows the right nav bar */
#inviNav {
  display: none;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

/* rightnavbar styling */
.navBarRightStyle {
  width: 30%;
  height: 100vh;
  position: fixed;
  right: 0;
  /* left:0; */
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #2c2b2bab;
  backdrop-filter: blur(10px);
  gap: 2rem;
  transition: 2s ease;
  display: none;
  /* border-left: 1px solid #fffffffd; */
  box-shadow: -1px 0 0.25rem #8f8f8f4f;
}

/* declaring classes that would hide  and remove sidenav */
.showsideNav {
  /* position: fixed; */
  /* background-color: red; */
  display: flex;
}

/* logo in the sidebar */
#navBarRight .rightNavBarGrp1 img {
  width: 50%;
  background-color: #f2f3f7;
  border-radius: 0.5rem;
  padding: 1rem 1.5rem;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#navBarRight .rightNavBarGrp2 ul {
  list-style: none;
}

#navBarRight .rightNavBarGrp2 li a {
  text-decoration: none;
  text-transform: capitalize;
  font-size: 1.5rem;
  line-height: 3;
}

/* sidenavbar toggle button  */
.rightNavBarGrp3 {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

/* sidenavbar toggle button svg */
#navBarRight .rightNavBarGrp3 svg {
  margin-left: -8rem;
}

/* the hero section */
m #heroSection {
  width: 100%;
  height: 120vh;
  height: fit-content;
  /* background-image: url(hero.jpg); */
  background-size: cover;
  background-repeat: no-repeat;
  background-blend-mode: darken;
}
/* the rest of the hero section, the most populus part */
.remHero {
  width: 100%;
  min-height: 100vh;
  height: fit-content;
  /* padding-bottom: ; */
  background-image: url(REPLACE\ THIS\ SCREEN11112111711111111.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-blend-mode: darken;
  background-color: rgba(0, 0, 0, 0.747);
  font-size: 5.6rem;
  font-weight: 600;
  color: #f2f3f7;
  text-shadow: 1px 1px 0.25rem #000000e8;
  display: flex;
  flex-direction: column;
  align-items: center;
  animation: fadeIn 1s linear;
}

#remHeroText {
  width: 90%;
  text-align: center;
  padding-top: 9rem;
  display: flex;
  flex-direction: column;
}

.remHeroText2 {
  line-height: 1.6;
  letter-spacing: -0.25rem;
}

/* diifferently colored text in hero */

.span1 {
  color: #d4af35;
}

/* button and linking part of nav */

#discoverXlearnmore {
  padding-top: 7rem;
  height: fit-content;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* button on hero */
#discover {
  border: 2px solid #d4af35;
  font-size: 1.8rem;
  padding: 0.7rem 2rem;
  padding: 0.75rem 3rem;
  text-transform: uppercase;
  border-radius: 4px;
  color: #f2f3f7;
  /* background-color: #f0f8ff15; */
  background-color: #d4af35;
  border: 2px solid #f2f3f750;
  transition: 0.5s ease-in;
  cursor: pointer;
}

#discover:hover {
  background-color: #d4af35;
  color: #f2f3f7;
  border: 2px solid #f2f3f750;
}

/* text on the discover section */
.learnMore {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 5rem;
  gap: 2rem;
}

.learnMoreText {
  font-size: 1.75rem;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 2px;
  color: #f2f3f7;
  font-weight: lighter;
  padding-bottom: 5rem;
}

.learnMoreIcon {
  display: none;
}

.learnMoreIconBg:hover .learnMoreIcon {
  stroke: #d4af37;
}

.learnMoreIcon:hover {
  stroke: #d4af37;
  /* background-color: #d1b970; */
}
/* ... */

